Add terminal color detection API
Implement color detection for terminals including:
- ColorDepth enum for color capability levels (8/16/256/true color)
- TerminalTheme enum for light/dark theme detection
- TerminalColorCapability for suggested ANSI codes based on theme
- TerminalColorDetector for runtime detection via environment and OSC queries
- Device/Connection interface extensions for OSC query support
- Detection for modern terminals (Ghostty, iTerm2, Kitty, Alacritty,
  vscode, WezTerm, Konsole, ConEmu/Cmder, Windows Terminal, +++)
- Safe handling to avoid OSC response leakage in multiplexers
- Tmux passthrough detection

Also replaces maven-checkstyle-plugin with formatter-maven-plugin